--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11413,3 +11413,15 @@ section.user_info h1 {
   border-radius: 50%;
 }
 
+/* User editor */
+
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
+
